New endpoint added in booking controller for recurring bookings
